- fixed: character conversion when reading characters from id3 tags (using fromLocal8Bit on reading tags)
- fixed: deleting files (moving to trash dir) if moving across partitions (thanks to Bernhard)
- fixed: deadlock when closing yammi while initialization
- fixed: context menu -> "go to album" for compilations with different artists
- improved: application icon (thanks to Alessandro)


13.12.2004 version 1.2-rc
#########################
- added: italian translation (thanks to Alessandro)
- added: spanish translation (thanks to Miguel)
- added: GStreamer support (experimental, thanks to Martin)

- added: reading ogg vorbis or id3 tags in *.flac files (no layer info(length, bitrate) yet)
- added: option to follow symlinks on scanning
- added: trying to read ogg vorbis tags in flac files
- updated: yammi handbook

- fixed: proper escaping of filenames for playing in artsplayer or noatun (eg. files containing '#')
- fixed: starting yammi via yammi.desktop file (no more console opened by default)
- fixed: application icons in bigger sizes
- fixed: corrected installation in KDE menu under Multimedia/Audio Player
- fixed: export to m3u plugin: no more empty line at end of resulting playlist
- fixed: suffix "..mp3" shown in proposed filename in song info dialog
- fixed: corrected makefile.am in icons to correctly create directories
- fixed: crash on closing yammi (correctly waiting for search thread to terminate)
- fixed: yammi can be called with --nofork option now (eg. for debugging)
- fixed: scanning id3 tags with umlaute in certain environments (=> calling Link() on id3lib with local8Bit() conversion)
- fixed: conflict on findSignal() for XmmsPlayer / NoatunPlayer
- fixed: correct default value + saving of filename pattern (for scanning)
- fixed: crash after deleting songs (when in folder "All Songs")
- fixed: crash on checking consistency (correcting directory, but no leading slash in pattern)