@@ -6,6 +6,7 @@
 - fixed: deleting files (moving to trash dir) if moving across partitions (thanks to Bernhard)
 - fixed: deadlock when closing yammi while initialization
 - fixed: context menu -> "go to album" for compilations with different artists
+- fixed: restoring "guessing mode" setting
 - improved: application icon (thanks to Alessandro)
 
 
